GTAU MC to MB sync + refactoring